--- a/style.css
+++ b/style.css
@@ -146,6 +146,16 @@ code {
 
 /* bg */
 .bg-glow {
+  transition: transform 1s;
+  border-radius: 50%;
+  box-shadow: inset 0 0 10px #41a3ff, inset 30px 0 10px #41a3ff,
+    inset -20px 0 10px #7abfff, inset 10px 0 30px #7cc0ff,
+    inset -20px 0 10px #41a3ff, 0 0 10px, -5px 0 20px #41a3ff,
+    5px 0 10px #41a3ff;
+}
+
+.bg-glow:hover {
+  transform: scale(1.02);
   border-radius: 50%;
   box-shadow: inset 0 0 70px #41a3ff, inset 30px 0 100px #41a3ff,
     inset -20px 0 100px #41a3ff, inset 20px 0 600px #41a3ff,
